# AmbiScreen

./: CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
AmbiScreen/: AmbiScreen.cpp  AmbiScreen.h  CMakeLists.txt
dependencies/ScreenCaptureLite/: CMakeLists.txt
src/: CMakeLists.txt  FrameSection.hpp  ScreenManager.cpp  ScreenManager.h  main.cpp
src/utils/: FrameGrabber.hpp  FrameSection.hpp  Image.hpp  Serial.hpp  Serializable.hpp
